deploy/deploy-1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
  labels:
    app: apache2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      containers:
      - name: apache2
        image: httpd
        ports:
        - containerPort: 80
